# l4v1-analytics

./: .readthedocs.yaml  .readthedocs.yml  README.md  pyproject.toml
data/: supermarket_sales.parquet
docs/: conf.py  documentation.rst  index.rst  requirements.txt
docs/quick_start/: quick_start.ipynb
l4v1/: impact_analysis.py  price_volume_mix.py
l4v1-analytics/: price_volume_mix.py
