[tool.poetry]
name = "l4v1"
version = "0.0.1"
description = ""
authors = ["Miro Lavi"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.20"
plotly = "^5.20.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"
ruff = "^0.3.7"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
